--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">UniPay</string>
+
+    <string name="public_key">FLWPUBK_TEST-a40178ecdee3ee26ef84092cbaccf966-X</string>
+    <string name="sec_key">FLWSECK_TEST-0747fff3cc80316df038c509ebef57aa-X</string>
+    <string name="enc_key">FLWSECK_TESTda6db672bf94</string>
 </resources>
